Fixed tests after changes in entities